...
    <android.support.v7.widget.RecyclerView
        android:id="@+id/todos_view_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/todos_view_empty_list_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/todos_view_error_message"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/todos_view_new_todo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_white_24dp"
...
