<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/create_todo_dialog_view_contents_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"
        android:lines="1"
        android:hint="@string/create_todo_dialog_hint" />

</FrameLayout>